--- a/app/views/employee/dashboard/index.html.erb
+++ b/app/views/employee/dashboard/index.html.erb
@@ -7,7 +7,7 @@
       <div class="x-panel tile overflow-hidden">
         <div class="x-title">
           <h5>
-            <label><span><%= t ".user_over_view" %></span></label>
+            <label><span>Tổng quan đơn hàng</span></label>
             <br>
             <%= link_to t(".go_to_manage_orders"), employee_orders_path %>
           </h5>
