--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -14,15 +14,14 @@
 		</div>
      
 		<div class="row col-md-12" id="foods">
-      <div class="controls pull-right hidden-xs">
-          <a class="left fa fa-chevron-left btn btn-success" href="#carousel-example"
-              data-slide="prev"></a><a class="right fa fa-chevron-right btn btn-success" href="#carousel-example"
-                  data-slide="next"></a>
-      </div>
+      <%# <div class="controls pull-right hidden-xs">
+        <a class="left fa fa-chevron-left btn btn-success" href="#carousel-example" data-slide="prev"></a>
+				<a class="right fa fa-chevron-right btn btn-success" href="#carousel-example" data-slide="next"></a>
+      </div> %>
       <div id="carousel-example" class="carousel slide hidden-xs" data-ride="carousel">
         <div class="carousel-inner">
           <div class="item active">
-            <div class="col-item">
+            <div class="row">
 			        <%= render partial: 'food_detail', collection: @foods, as: :food %>
             </div>
           </div>
