--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -58,7 +58,7 @@
 
 		            <li>
 		              <%= link_to logout_path, method: :delete do %>
-		               Đăng xuất
+		               Đăng Xuất
 		              <% end %>
 		            </li>
 		        <% else %>
