--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -18,10 +18,9 @@
             <%= f.submit t(".order"), class:"btn btn-success js-push-button" %>
           <% end %>
         </div>
-
       </div>
   </div>
-  <div class="col-sm-3">
+  <div class="col-sm-5">
     <div id="order-head">
       <b><%= t ".info_order" %> ( <%=current_user.carts.count%> <%= t ".orders" %> )</b>
     </div>
@@ -43,8 +42,9 @@
            </tr>
           <% end %>
           <tr>
-            <td><b><%= t ".total" %> :</b></td>
-            <td><%= Cart.total current_user.id %> VNĐ</td>
+            <td><b><%= t ".total" %></b></td>
+            <td style="color: red;"><%= Cart.total current_user.id %> VNĐ</td>
+            <td></td>
           </tr>
         </tbody>
       </table>
