--- a/app/views/employee/dashboard/index.html.erb
+++ b/app/views/employee/dashboard/index.html.erb
@@ -22,7 +22,7 @@
           <hr>
         </div>
         <div class="x-content">
-          <%= column_chart @orders.group(:status).count, id: "employee_chart", xtitle: "số lượng", ytitle: "Trạng thái", messages: {empty: "No data"}  %>
+          <%= column_chart @orders.group(:status).count, id: "employee_chart", xtitle: "Trạng thái", ytitle: "số lượng", messages: {empty: "No data"}  %>
           <div><%= t ".order_status" %></div>
         </div>
       </div>
