--- a/app/views/employee/orders/filter_order_status.erb
+++ b/app/views/employee/orders/filter_order_status.erb
@@ -14,6 +14,10 @@
           <br>
           <i class="fa fa-money" aria-hidden="true"></i> <span><%= t ".total_money" %>: $<%= order.total_money %></span>
           <br>
+          <% if !order.new? %>
+          <i class="fa fa-truck" aria-hidden="true"></i> <span>Người giao hàng: <%= order.employee_name %></span>
+          <br>
+          <% end %>
           <i class="fa fa-shopping-bag" aria-hidden="true"></i> <span><%= t ".status" %>: </span>
           <% if order.new? %>
             <span class="label label-primary"><%= t ".new" %></span>
