--- a/app/views/employee/orders/index.html.erb
+++ b/app/views/employee/orders/index.html.erb
@@ -1,6 +1,20 @@
 <div class="panel-heading">
   <span class="glyphicon glyphicon-list"></span>Danh sách đơn hàng
 </div>
+
+<div class="row">
+    <div class="col-md-9">
+        <%= search_form_for [:employee,@search], html: {class: 'form-inline'} do |f| %>
+          <%= f.label :customer_name_or_employee_name_or_address_cont, 'Từ khóa',  class: 'col-md-2 text-center' %>
+          <%= f.search_field :customer_name_or_employee_name_or_address_cont, class: 'col-md-9 form-control', placeholder: 'khách hàng, nguoi giao, địa chỉ' %>
+          <%= f.submit 'Tìm kiếm', :class => 'u-mgl5 col-md-2 btn btn-primary' %>
+        <% end %>
+    </div>
+    <div class="container">
+      <button class="btn btn-info"><i class="fa fa-file-excel-o"></i>&nbsp&nbsp<%= link_to t(".download"), admin_orders_url(format: "xls") %></button>
+    </div>
+</div>
+
 <br>
 <div class="container">
   <table id="delivery_month" class="table table-striped table-bordered" cellspacing="0" width="100%">
@@ -10,9 +24,9 @@
       <th><%=t ".customer" %></th>
       <th><%=t ".employee" %></th>
       <th><%=t ".address" %></th>
-      <th><%=t ".total_money" %></th>
+      <th><%= sort_link @search, :total_money, t(".total_money") %></th>
       <th><%=t ".status" %></th>
-      <th><%=t ".created_at" %></th>
+      <th><%= sort_link @search, :created_at, t(".created_at") %></th>
     </tr>
     </thead>
     <tbody>
@@ -29,10 +43,17 @@
     <% } %>
     </tbody>
   </table>
+  <div class="pull-left">
+    <span>
+      <strong class="text-capitalize"><%= t ".filter" %></strong>
+      <%= @search.result.size %> <%= t ".have_record" %>
+    </span>
+  </div>
+  <div class="pull-right">
+    <%= paginate @all_orders %>
+  </div>
 </div>
-<div class="container">
-  <button class="btn btn-default btn-secondary"><i class="fa fa-file-excel-o"></i><%= link_to t(".download"), admin_orders_url(format: "xls") %></button>
-</div>
+
 <script>
   $(document).ready(function() {
     $('#delivery_month').DataTable();
