--- a/app/views/foods/_modal_add_cart.html.erb
+++ b/app/views/foods/_modal_add_cart.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade" id="addFood-<%= food.id %>" role="dialog">
+<div class="modal fade" id="addFood-<%= food.id %>" role="dialog" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-lg-1">
   
     <!-- Modal content-->
