--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,7 +15,7 @@
   <%= f.text_field :address, class: 'form-control' %>
 
   <%= f.label :phone_number %>
-  <%= f.text_field :phone_number, class: 'form-control' %>
+  <%= f.text_field :phone_number, class: 'form-control', required: true %>
 
   <%= f.label :avatar %>
   <%= f.file_field :avatar_url, accept: "image/jpeg,image/jpg,image/png" , class: 'form-control'%>
