--- a/app/views/foods/_food_detail.html.erb
+++ b/app/views/foods/_food_detail.html.erb
@@ -33,7 +33,7 @@
             <!-- <p class="price"><%= format_price food.price %></p> -->
           </div>
           <div class="col-md-4 col-sm-4">
-            <button value="<%= food.id %>" class="show-add btn btn-success pull-right" data-toggle="modal" data-target="#addFood-<%= food.id %>"><i class="fa fa-cart-plus " aria-hidden="true"></i></button>
+            <button value="<%= food.id %>" type="button" class="show-add btn btn-success pull-right" data-toggle="modal" data-target="#addFood-<%= food.id %>"><i class="fa fa-cart-plus " aria-hidden="true"></i></button>
           </div>
         </div>
     </span>
