--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -86,7 +86,7 @@
 						    <h2>Chọn Món Theo Cách Của Bạn </h2>
 						</div>
 						<div class="col-md-12">
-					    Bạn đang khó khăn trong việc lựa chọn Món ăn đúng sở thích, có giao hàng tận nơi ? Hay Bạn đang tìm Gilf E.Voucher để tặng người thân, bạn bè ? Hoặc là Bạn đang tìm một buổi tối lãng mạn tại nhà hàng sang trọng ? Hãy để peashop.vn giúp Bạn làm điều đó nhé, Chỉ bằng 1 cú CLICK.
+					    Bạn đang khó khăn trong việc lựa chọn Món ăn đúng sở thích, có giao hàng tận nơi ? Hay Bạn đang tìm Gilf E.Voucher để tặng người thân, bạn bè ? Hoặc là Bạn đang tìm một buổi tối lãng mạn tại nhà hàng sang trọng ? Hãy để foodservice.vn giúp Bạn làm điều đó nhé, Chỉ bằng 1 cú CLICK.
 					    </div>
 					</div>
 			    </div>
