--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -27,7 +27,7 @@
                           </div>
                         </td>
                         <td class="col-sm-1 col-md-1" style="text-align: center">
-                          <input class="quantity" type="number" min="0" style="width: 150px" value="<%= cart.quantity %>" id="cart-<%= cart.id %>">
+                          <input class="quantity" type="number" min="0" max="30" style="width: 150px" value="<%= cart.quantity %>" id="cart-<%= cart.id %>">
                         </td>
                         <td class="col-sm-1 col-md-1 text-center">
                           <div class="price" id="price-<%= cart.id %>">
