--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
     	<div class="Features-section paddingTB60 bg-dgrey ">
 			<div class="container">
 				<div class="row text-center">
-					<P>PEASHOP.COM.VN</P>
+					<P>FOODSERVICES.COM.VN</P>
 					<h3>Chọn Món Hôm Nay, Nhận Ngay Ưu Đãi</h3>
 				</div>
 				<br>
@@ -91,7 +91,7 @@
 					</div>
 			    </div>
 		    </div>
-		    <div class="footer">
+		    <div class="footer" id="contact_us">
 				<div class="container">
 					<div class="col-md-3 footer-one">
 						<h5>About Us </h5>
