--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -38,7 +38,7 @@
         <td><%= item.employee.name if item.employee %></td>
         <td><%= item.address %></td>
         <td><%= item.customer.phone_number %></td>
-        <td><%= item.total_money %></td>
+        <td><%= format_price item.total_money.round %></td>
         <td><%= item.status == 1 ? 'new' : item.status == 2 ? 'inprogress' : 'done' %></td>
         <td><%= item.created_at.strftime Settings.format_time_with_hour %></td>
       </tr>
