--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav navbar-right">
 		        
-		        <li class="active"><%= link_to root_path do %><%= t "header.home" %><% end %></li>
+		        <li class=""><%= link_to root_path do %><%= t "header.home" %><% end %></li>
 		        <!-- thuc don <li><a href="#">header.menu</a></li> -->
 		        <li><a href="#hot_sale"><%= t "header.promotion" %></a></li>
 
@@ -38,8 +38,8 @@
 		          </ul>
 		        </li>
 
-		        <li class="active"><%= link_to orders_path do %><%= t "header.order" %><% end %>
-		        <li><a href="#"><%= t "header.contact_us" %></a></li>
+		        <li class=""><%= link_to orders_path do %><%= t "header.order" %><% end %>
+		        <li><a href="#contact_us"><%= t "header.contact_us" %></a></li>
 
 		        <% if logged_in? %>
 		            <li class="dropdown">
