--- a/app/views/orders/_customer_index.html.erb
+++ b/app/views/orders/_customer_index.html.erb
@@ -15,7 +15,7 @@
               <h4><%= link_to order_detail.food.name, order_detail.food, class: "text-center" %></h4>
               <div class="row">
                 <div class="col-md-12"><i class="fa fa-star" aria-hidden="true"></i> <label><%= t(".quantity") + " :"%></label><span><%= order_detail.quantity %></span></div>
-                <div class="col-md-12"><i class="fa fa-money" aria-hidden="true"></i> <label><%= t ".total_money" %></label>: <%= order.total_money %></div>
+                <div class="col-md-12"><i class="fa fa-money" aria-hidden="true"></i> <label><%= t ".total_money" %></label>: <%= format_price order.total_money.round %></div>
                 <div class="col-md-12"><i class="fa fa-address-book" aria-hidden="true"></i> <label><%= t ".destination" %></label>: <%= order.address %></div>
                 <div class="col-md-12"><i class="fa fa-clock-o" aria-hidden="true"></i> <label><%= t(".created_at") %>: </label>
                   <span><%= order_detail.created_at.strftime(t("date_format")) %></span>
