--- a/app/views/orders/_employee_index.html.erb
+++ b/app/views/orders/_employee_index.html.erb
@@ -44,7 +44,7 @@
                 <% order.order_details.each do |detail|%>
                   <li><label><%= t ".name" %></label>: <%= Food.find(detail.food_id).name %></li>
                   <li><label><%= t ".quantity" %></label>: <%= detail.quantity%></li>
-                  <li><label><%= t ".price_each" %></label>: $<%= detail.total_money %></li>
+                  <li><label><%= t ".price_each" %></label>: $<%= detail.total_money.round %></li>
                   <li class="show_food">
                     <%= link_to detail.food do %>
                       <%= image_tag Food.find(detail.food_id).img_url, alt: detail.food.name %>
